# chunk_xml

./: LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
notes/: chunk-illustration.xoj
src/chunk_xml/: chunk.py
tests/: random_tree.py  test_chunk.py
