[project]
name = "chunk_xml"
version = "0.0.1"
authors = [ { name="Derek A. Rhodes", email="physci@gmail.com" } ]
description = "chunk an xml document down to smaller pieces"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
 "lxml",
 "token_count"
]  

[project.optional-dependencies]
test = [
 "pytest",
 "flake8",
 "black",
 "pytest-pudb",
]

[project.urls]
Homepage = "https://github.com/drhodes/chunk_xml"
Issues = "https://github.com/drhodes/chunk_xml/issues"



